--- a/index.css
+++ b/index.css
@@ -61,8 +61,8 @@ html,body{
     margin-top: 50px;
 }
 
-/* Profile */
-#profile-img{
+/* Introduction */
+#introduction-img{
     border-right: 2px solid black;
     padding: 10px;
 }
@@ -76,7 +76,7 @@ html,body{
     margin-top: 10px;
 }
 
-#profile-body{
+#introduction-body{
     text-align: center;
     padding: 10px;
 }
