--- a/index.css
+++ b/index.css
@@ -1,8 +1,3 @@
-html,body{
-    height: 100%;
-    width: 100%;
-}
-
 /* Navigation */
 #navigation{
     list-style: none;
@@ -35,36 +30,21 @@ html,body{
     background-color: #110C11;
 }
 
-.active{
-    background-color: wheat;
-    color: #110C11;
-}
-
-.makeNavVertical{
-    margin: 10px;
-    width: 100%;
-    
-}
-
-.changeDefaultMargin{
-    margin-top: 270px !important;
-}
-
 @media only screen and (max-width: 634px){
     .navigation-item{
         width: 100%;
     }
 }
 
-#main-body{
-    padding: 50px 20px;
-    margin-top: 50px;
-}
-
 /* Introduction */
 #introduction-img{
     border-right: 2px solid black;
     padding: 10px;
+}
+
+#introduction{
+    padding: 50px 20px;
+    margin-top: 50px;
 }
 
 .removeBorder{
@@ -79,4 +59,67 @@ html,body{
 #introduction-body{
     text-align: center;
     padding: 10px;
+}
+
+/* Profile */
+#profile{
+    /* border: 1px solid black; */
+    width: 100%;
+    margin: 0;
+    padding: 50px 0;
+}
+
+h2{
+    text-align: center;
+}
+
+#languages,#tools,#concepts{
+    padding: 7px;
+}
+
+#languages{
+    background-color:greenyellow;
+}
+
+#tools{
+    background-color: whitesmoke;
+}
+
+#concepts{
+    background-color: goldenrod;
+}
+
+.languages label,.languages{
+    display: block;
+    text-align: center;
+}
+
+/* Extra */
+html,body{
+    height: 100%;
+    width: 100%;
+}
+
+#profile,#introduction,#language-body{
+    width: 100%;
+}
+
+.makeHeight100{
+    height: 100%;
+}
+
+.active{
+    background-color: wheat;
+    color: #110C11;
+}
+
+.makeNavVertical{
+    margin: 10px;
+    width: 100%;
+    
+}
+
+.changeDefaultMargin{
+    margin-top: 270px !important;
+    padding-bottom: 50px !important;
 }
