partially completted profile page

--- a/index.css
+++ b/index.css
@@ -89,7 +89,7 @@ h2{
     background-color: goldenrod;
 }
 
-.languages label,.languages{
+.experience label,.experience{
     display: block;
     text-align: center;
 }
