--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1;
+    z-index: 999;
     background-color: #110C11;
 }
 
@@ -97,6 +97,10 @@ h2{
 }
 
 /* Experience */
+#experience{
+    padding: 50px 0;
+}
+
 .carousel-item{
     background-color: #110C11;
     color: white;
@@ -106,6 +110,24 @@ h2{
     color: #110C11;
     width: 80%;
     margin: auto;
+}
+
+/* Projects */
+#projects{
+    padding: 50px 0;
+}
+
+/* Contact */
+#contact{
+    padding: 50px 0;
+}
+
+/* Footer */
+#footer{
+    text-align: center;
+    background-color: #110C11;
+    color: white;
+    padding: 10px;
 }
 
 /* Extra */
@@ -129,8 +151,7 @@ html,body{
 
 .makeNavVertical{
     margin: 10px;
-    width: 100%;
-    
+    width: 100%; 
 }
 
 .changeDefaultMargin{
