--- a/index.css
+++ b/index.css
@@ -41,9 +41,19 @@
     padding: 10px;
 }
 
+#introduction-img img{
+    height : 500px;
+    width : 300px;
+    border : 4px solid black;
+    border-radius: 250px;
+}
+
 #introduction{
     padding: 50px 20px;
-    margin-top: 50px;
+    margin: 0px;
+    padding-top: 100px;
+    /* background-color:bisque; */
+    background-color: darkslategrey;
 }
 
 .removeBorder{
@@ -58,8 +68,10 @@
 #introduction-body{
     text-align: center;
     padding: 10px;
+    /* background-color: #110C11;
+    color: wheat; */
     background-color: #110C11;
-    color: wheat;
+    color: silver;
 }
 
 /* Profile */
@@ -68,17 +80,18 @@
     width: 100%;
     margin: 0;
     padding: 50px 0;
+    background-color: burlywood;
 }
 
 h2{
     text-align: center;
 }
 
-#languages,#tools,#concepts{
-    padding: 7px;
+#languages,#tools,#concepts,#education{
+    width: 100%;
 }
 
-#languages{
+/* #languages{
     background-color:greenyellow;
 }
 
@@ -88,7 +101,7 @@ h2{
 
 #concepts{
     background-color: goldenrod;
-}
+} */
 
 .experience label,.experience{
     display: block;
@@ -98,6 +111,7 @@ h2{
 /* Experience */
 #experience{
     padding: 50px 0;
+    background-color: whitesmoke;
 }
 
 .carousel-item{
@@ -119,12 +133,19 @@ h2{
 /* Contact */
 #contact{
     padding: 50px 0;
+    color: white;
+    background-color: #434242;
+}
+
+#contact h2{
+    font-size: 50px;
+    font-weight: 200;
 }
 
 /* Footer */
 #footer{
     text-align: center;
-    background-color: #110C11;
+    background-color: #434242;
     color: white;
     padding: 10px;
 }
@@ -135,7 +156,7 @@ html,body{
     width: 100%;
 }
 
-#profile,#introduction,#language-body,#experience,#contact,#projects{
+#profile,#introduction,#experience,#contact,#projects{
     width: 100%;
 }
 
@@ -156,4 +177,17 @@ html,body{
 .changeDefaultMargin{
     margin-top: 270px !important;
     padding-bottom: 50px !important;
+}
+
+.labelH2{
+    font-weight: 200;
+    font-size: 25px;
+    text-align: center;
+    padding: 10px 14px;
+    border-right: 2px solid;
+}
+
+hr{
+    border-top: 1px solid;
+    width: 100%;
 }
